infrastructure/eks/helm-manifests/lalau.yaml
---
# Source: open-webui/charts/ollama/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui-ollama
  labels:
    helm.sh/chart: ollama-0.33.0
    app.kubernetes.io/version: "0.1.41"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/component: open-webui-ollama
spec:
  type: ClusterIP
  ports:
    - port: 11434
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/component: open-webui-ollama
---
# Source: open-webui/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  labels:
    helm.sh/chart: open-webui-3.0.4
    app.kubernetes.io/version: "v0.3.4"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/component: open-webui
spec:
  selector:
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/component: open-webui
  type: ClusterIP
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: http
---
# Source: open-webui/charts/ollama/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui-ollama
  labels:
    helm.sh/chart: ollama-0.33.0
    app.kubernetes.io/version: "0.1.41"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/component: open-webui-ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: open-webui
      app.kubernetes.io/component: open-webui-ollama
  template:
    metadata:
      labels:
        helm.sh/chart: ollama-0.33.0
        app.kubernetes.io/version: "0.1.41"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/instance: open-webui
        app.kubernetes.io/component: open-webui-ollama
    spec:
      serviceAccountName: open-webui-ollama
      securityContext:
        {}
      containers:
        - name: ollama
          securityContext:
            {}
          image: "ollama/ollama:0.1.41"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 11434
              protocol: TCP
          args:
          resources:
            limits: {}
            requests: {}
          volumeMounts:
            - name: ollama-data
              mountPath: /root/.ollama
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 6
          lifecycle:
            postStart:
              exec:
                command: [ "/bin/sh", "-c", "echo pedrosodiego/maia:saul-goodman | xargs -n1 /bin/ollama pull " ]
      volumes:
        - name: ollama-data
          persistentVolumeClaim:
            claimName: open-webui-ollama
---
# Source: open-webui/templates/workload-manager.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: open-webui
  labels:
    helm.sh/chart: open-webui-3.0.4
    app.kubernetes.io/version: "v0.3.4"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/component: open-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: open-webui
      app.kubernetes.io/component: open-webui
  template:
    metadata:
      labels:
        helm.sh/chart: open-webui-3.0.4
        app.kubernetes.io/version: "v0.3.4"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/instance: open-webui
        app.kubernetes.io/component: open-webui
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false
      containers:
      - name: open-webui
        image: ghcr.io/open-webui/open-webui:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 200m
            memory: 256Mi
        volumeMounts:
        - name: data
          mountPath: /app/backend/data
        tty: true
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: open-webui
---
# Source: open-webui/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui
  labels:
    helm.sh/chart: open-webui-3.0.4
    app.kubernetes.io/version: "v0.3.4"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/component: open-webui
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
      - "maia-lasdpc.icmc.usp.br"
      secretName: ollama-tls-secret
  rules:
  - host: maia-lasdpc.icmc.usp.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: open-webui
            port:
              name: http
---
# Source: open-webui/charts/ollama/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "open-webui-ollama-test-connection"
  labels:
    helm.sh/chart: ollama-0.33.0
    app.kubernetes.io/version: "0.1.41"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/component: open-webui-ollama
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['open-webui-ollama:11434']
  restartPolicy: Never
